parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__func_def_statement-3.snap
---
source: parser/src/parser/parser.rs
description: "def a(a, b, c): pass"
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 20,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 6,
                        end: 13,
                    },
                    posonlyargs: [],
                    args: [
                        Arg {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            arg: "a",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 9,
                                end: 10,
                            },
                            arg: "b",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 12,
                                end: 13,
                            },
                            arg: "c",
                            annotation: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 16,
                                end: 20,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
