parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__func_def_statement-5.snap
---
source: parser/src/parser/parser.rs
description: "def a(a,\n                b,\n                c): pass"
---
Module {
    node: Node {
        start: 0,
        end: 52,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 52,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 6,
                        end: 45,
                    },
                    posonlyargs: [],
                    args: [
                        Arg {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            arg: "a",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 25,
                                end: 26,
                            },
                            arg: "b",
                            annotation: None,
                        },
                        Arg {
                            node: Node {
                                start: 44,
                                end: 45,
                            },
                            arg: "c",
                            annotation: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 48,
                                end: 52,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
