parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__generator_expression-5.snap
---
source: parser/src/parser/parser.rs
description: (ord(c) for line in file for c in line)
---
Module {
    node: Node {
        start: 0,
        end: 39,
    },
    body: [
        ExpressionStatement(
            Generator(
                Generator {
                    node: Node {
                        start: 0,
                        end: 39,
                    },
                    element: Call(
                        Call {
                            node: Node {
                                start: 1,
                                end: 7,
                            },
                            func: Name(
                                Name {
                                    node: Node {
                                        start: 1,
                                        end: 4,
                                    },
                                    id: "ord",
                                },
                            ),
                            args: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 5,
                                            end: 6,
                                        },
                                        id: "c",
                                    },
                                ),
                            ],
                            keywords: [],
                            starargs: None,
                            kwargs: None,
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 8,
                                end: 24,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 12,
                                        end: 16,
                                    },
                                    id: "line",
                                },
                            ),
                            iter: Name(
                                Name {
                                    node: Node {
                                        start: 20,
                                        end: 24,
                                    },
                                    id: "file",
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                        Comprehension {
                            node: Node {
                                start: 25,
                                end: 38,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 29,
                                        end: 30,
                                    },
                                    id: "c",
                                },
                            ),
                            iter: Name(
                                Name {
                                    node: Node {
                                        start: 34,
                                        end: 38,
                                    },
                                    id: "line",
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
