parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__if-2.snap
---
source: parser/src/parser/parser.rs
description: "if a:\n    pass"
---
Module {
    node: Node {
        start: 0,
        end: 14,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 0,
                    end: 14,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 3,
                            end: 4,
                        },
                        id: "a",
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 10,
                                end: 14,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
